--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import "./utils/_vars";
 @import "./utils/_global";
-@import "./utils/_fonts";
+@import "./utils/fonts";
 @import "./utils/_container";
 @import "./components/_header";
 @import "./components/_logo";
