--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: clamp(3.125rem, 1.696rem + 7.14vw, 7.5rem) 0 rem(56);
+  padding: clamp(3.125rem, 1.696rem + 7.14vw, 7.5rem) 0 clamp(1.625rem, 1.013rem + 3.06vw, 3.5rem);
   background-color: var(--background);
   font-size: rem(15);
   line-height: 1.6;
