--- a/scss/style.css
+++ b/scss/style.css
@@ -180,32 +180,6 @@ button,
 }
 
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url(../fonts/Gilroy-Regular.woff2) format("woff2"), url(../fonts/Gilroy-Regular.woff) format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-.testimonials__comment-text, .testimonials__comment-name span, .tabs-buttons__btn, .search__input, .hero__title {
-  font-family: "Gilroy";
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(../fonts/Inter-Regular.woff2) format("woff2"), url(../fonts/Inter-Regular.woff) format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "DMSans", sans-serif;
-  src: url(../fonts/DMSans-Regular.woff2) format("woff2"), url(../fonts/DMSans-Regular.woff) format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
   font-family: "Gilroy";
   src: url(../fonts/Gilroy-Medium.woff2) format("woff2"), url(../fonts/Gilroy-Medium.woff) format("woff");
   font-weight: 500;
@@ -387,7 +361,7 @@ button,
     left: 0;
   }
   .nav__item:not(:last-child) {
-    margin-bottom: 1.875rem;
+    margin-bottom: 1.25rem;
   }
 }
 
@@ -957,7 +931,7 @@ button,
 }
 
 .footer {
-  padding: clamp(3.125rem, 1.696rem + 7.14vw, 7.5rem) 0 3.5rem;
+  padding: clamp(3.125rem, 1.696rem + 7.14vw, 7.5rem) 0 clamp(1.625rem, 1.013rem + 3.06vw, 3.5rem);
   background-color: var(--background);
   font-size: 0.9375rem;
   line-height: 1.6;
